@@ -1,6 +1,7 @@
 2013-05-20  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fix for backward compatibility of class tx_staticinfotables_div
+	* Update some copyright notices
 
 2013-05-16  Stanislas Rolland  <typo3@sjbr.ca>
 
